@@ -3,6 +3,7 @@
 * [BugFix] An item receives only a single tap, hence, popping only the dialog, and preventing popping more screens.
 * Added the PullToStartFloatingButtonPosition option.
 * Some code refactoring.
+* Added the attributes table to the README.md file.
 
 20-07-2020
 * Refactored the code.
